<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dewberry"
        android:text="@string/quick_calculation"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EWeigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="#A770EF"
            android:gravity="center"
            android:hint="@string/dx"
            android:inputType="numberDecimal"
            android:textColor="#BBDEFB" />


        <TextView
            android:id="@+id/TWeigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/VKresult"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dewberry"
        android:text="@string/calculation_dx"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Ekanv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A770EF"
            android:focusable="auto"
            android:gravity="center"
            android:hint="@string/vk"
            android:inputType="numberDecimal"
            android:textColor="#BBDEFB" />


        <EditText
            android:id="@+id/EbeforeDx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A770EF"
            android:focusable="auto"
            android:gravity="center"
            android:hint="@string/dx1"
            android:inputType="numberDecimal"
            android:textColor="#BBDEFB" />


        <EditText
            android:id="@+id/EafterDx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A770EF"
            android:focusable="auto"
            android:gravity="center"
            android:hint="@string/dx2"
            android:inputType="numberDecimal"
            android:textColor="#BBDEFB" />

        <Button
            android:id="@+id/Bresult"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/circle"
            android:text="@string/result"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />


        <TextView
            android:id="@+id/TResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/VKresult"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dewberry"
        android:text="@string/calculation_Vdx"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/SpinnerRs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:entries="@array/rs"
            android:gravity="center" />

        <TextView
            android:id="@+id/TextDx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/FloactionButton"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="8dp"
        android:src="@drawable/add"
        app:fabSize="mini"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#0097A7" />


</LinearLayout>